--- a/gb/24/11/21/n14375373.md
+++ b/gb/24/11/21/n14375373.md
@@ -6,7 +6,7 @@
 <h6></h6>
 <hr>
 	<p>【大纪元2024年11月21日讯】（大纪元记者李熙采访报导）在江苏邮政局从事教育培训管理工作的徐春霞，50岁时被单位以工人岗强制提前退休。10月她进京反映问题，被当地12个刑警队便衣绑架，后被非法拘禁在一家酒店内至今。</p>
-<p><a title="11月12日，江苏淮安市金湖县邮政局女职工徐春霞向大纪元控诉：金湖县公安局对我非法拘禁在宾馆已经28天了，分配四个单位：金湖邮政、公安、社区、退役军人事务局，每天二班，每班4个人重兵把守。 ｜#中国新闻 新唐人大纪元联合频道" src=""></a><a href="https://dlvlk7o3qgp9v.cloudfront.net/P6mbSLkYd"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h6ni579nhr7HKFhGep2KNyA11qn1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a title="11月12日，江苏淮安市金湖县邮政局女职工徐春霞向大纪元控诉：金湖县公安局对我非法拘禁在宾馆已经28天了，分配四个单位：金湖邮政、公安、社区、退役军人事务局，每天二班，每班4个人重兵把守。 ｜#中国新闻 新唐人大纪元联合频道" loading="lazy" data2-src=""></a><a href="https://d3q99y09eaol9n.cloudfront.net/E6hbSLkYs"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.ganjingworld.com/zh-TW/embed/1h6ni579nhr7HKFhGep2KNyA11qn1c" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>管理岗位被顶替 退休金少一半</h2>
 <p>徐春霞是一名退役军人，1991年退伍之后分配到邮电局工作，2012年开始从事教育管理工作。2019年，她突然收到一份退休审批表。她发现，退休审批表上的工作简历与其不符，表上填写的是在生产部门上班。</p>
 <p>按照规定，生产部门的女员工50岁退休，而从事管理工作的女员工55岁退休。从事管理工作的徐春霞因此没在退休审批表上签字，但仍被强制办理了退休手续。</p>
@@ -27,34 +27,33 @@
 <p>大纪元记者多次拨打金湖政法委张荣平书记手机，电话无法接通。</p>
 <p>徐春霞表示，要求有关部门介入，对金湖县公安局副局长陈宏明滥用职权、知法犯法展开调查，追究相关责任人责任，维护退役军人合法权益以及保障人身安全和宪法赋予公民的合法权利，并立即释放她。</p>
 <p>责任编辑：郑浩宇</p>
-	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/19/n14229568.md#1">FBI发现马里兰高中生计划实施校园枪击案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392273.md#1">无痛觉竟成超能力 杰克·奎德演绎油锅捞手枪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392212.md#1">奢侈品折扣店在美兴起 价格实惠受消费者追捧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/17/n14392295.md#1">礼品卡诈骗猖獗 加州再有两华人男子被逮捕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/6/n14545694.md#1">井有伦：大而美法案将深刻影响华人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545581.md#1">大而美法案下海外汇款税如何执行 一文看懂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545059.md#1">傅玉霞起诉中领馆保安故意伤害案 开庭审理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544602.md#1">海归学者引争议 中共党媒因何“辟谣”</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/8/n9014844.md#1" target="_blank">【细语人生】见证大法的神奇（4）</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/17/n10063990.md#1" target="_blank">苏智敏：血腥计生悲歌——帮凶  弃卒  泪水</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/9/25/n4257161.md#1" target="_blank">慧真：世纪谎言  自焚伪案</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387867.md#1">如何把坏事变好事？谈随遇而安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/8/n12676763.md#1">【元曲大家】白朴绝意仕进 词曲慰平生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/30/n13684535.md#1">【传统音乐】传统文化与音乐 第四集</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391140.md#1">【菁英论坛】崩溃亡党在即 刘源绝望上书</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391093.md#1">【马克时空】美高超音速导弹再射成功 明年部署</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/16/n14392180.md#1">【音乐】海顿降E大调小号协奏曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388779.md#1">美国安局为何建议每周关手机一次 原因想不到</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391071.md#1">产能过剩 物价跌不停 中国经济陷恶性循环</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391111.md#1">富二代何超莲砸1亿拍电影 首日预售票房仅16万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391280.md#1">传克里斯伊凡在《复仇者联盟5》演“游牧者”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390760.md#1">睽违9年再接古装剧 胡歌有望饰演镖客一角?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/14/n14391136.md#1">曾赴中国拍戏 王耿豪爆返台关键：被逼政治表态</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390790.md#1">范冰冰自曝未在香港置业 直呼“楼价好贵”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390642.md#1">用手机拍微距—摄影家廖翠环的创作之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/15/n14391288.md#1">有使用暖气的看过来 专家教你用这招省钱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386612.md#1">护肾抗老：中西医冬季养生法则</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386475.md#1">赚百万美元不是梦 投资ETF有哪些好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386163.md#1">三招矫正驼背 一睡姿助躺平</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/21/n14375373.htm">被强制退休 江苏国企前职工维权遭非法拘禁</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375373.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
